Resolved overflow issue by using main wrapper instead of specific wrapper

--- a/MyPortfolio/wwwroot/css/site.css
+++ b/MyPortfolio/wwwroot/css/site.css
@@ -728,8 +728,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section, 
     position: relative;
 }
 
-
-
+/* set an earth to be backkground img*/
 #earth-bg {
     background: url(../images/communication.jpg);
     background-position: center center;
@@ -744,8 +743,49 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section, 
     width: 100%;
     height: 100%;
     opacity: 0.2;
-}   
+    transition: transform .5s ease; /* [2] Transition property for smooth transformation of images */
+}
+main {
+    overflow: hidden;
+}
 
+.img-load-zoom {
+    /*top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 999999;
+
+
+    overflow: hidden;
+    position: relative;*/
+}
+/* [3] Finally, transforming the image when container gets hovered */
+.img-load-zoom:hover #earth-bg {
+    /*transform: scale(1.5);*/
+}
+
+/* Slow-motion Zoom Container */
+.img-load-zoom--slowmo #earth-bg {
+    transform-origin: 50% 65%;
+    transition: transform 5s, filter 3s ease-in-out;
+    filter: brightness(150%);
+}
+
+/* The Transformation */
+.img-load-zoom--slowmo:hover #earth-bg {
+    filter: brightness(100%);
+    transform: scale(2);
+}
+
+
+#earth-bg:hover {
+   
+}
+
+/*Contact form style*/
 #contact .container{
     opacity: 1;
 }
